# Signora

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/shader/signora/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shader/signora/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/shader/signora/data/: AppDatabase.kt  Converters.kt  Shader.kt  ShaderDao.kt  ShaderRepository.kt  Texture.kt  TextureDao.kt
app/src/main/java/com/shader/signora/io/: database.kt
app/src/main/java/com/shader/signora/ui/: App.kt
app/src/main/java/com/shader/signora/viewmodels/: MainViewModel.kt  ResourceViewModel.kt  ShaderViewModel.kt
app/src/main/java/com/shader/signora/views/: EditorView.kt  WGPUSurfaceView.kt
app/src/main/res/drawable/: ic_nav_shared.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/jni-bind/: Cargo.toml
app/src/main/rust/jni-bind/src/: lib.rs
app/src/main/rust/ndk/: Cargo.toml
app/src/main/rust/ndk/src/: lib.rs
app/src/main/rust/src/: canvas.rs  lib.rs  surface.rs
app/src/main/rust/src/math/: position.rs
app/src/main/rust/src/renderer/: mod.rs
app/src/main/rust/src/renderer/fragment/: mod.rs
app/src/main/rust/src/renderer/geometry/: mod.rs  quad.rs
app/src/main/rust/src/view/: device.rs  mod.rs  surface.rs  touch.rs  window.rs
app/src/test/java/com/shader/signora/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
